--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}WO Tennis{% endblock %}</title>
+        <title>WO Tennis</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
         <script defer src="bot.js"></script>
     </head>
-    <body style="background-color:#173F2A; color:black">
+    <body style="background-color:rgb(46, 44, 44); color:black">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid" style="margin-left:40px; margin-right:40px">
-            <a class="navbar-brand" href="/index.php">
-                <img  alt="CHATBOT" width=50 height=68>
-            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('login') }}">Default V1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('registration') }}">V2</a>
+                        <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
                     </li>
                 </ul>
             </div>
         </div>
+        <div id="mySidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <img  alt="CHATBOT" width=50 height=68>
+            <a href="#">BOT_V1</a>
+            <a href="#">BOT_V2</a>
+            <a href="#">BOT_V3</a>
+          </div>
     </nav>
     <div style="margin:40px">
         <div id='bodybox'>
@@ -38,7 +39,7 @@
             <p id="chatlog3" class="chatlog">&nbsp;</p>
             <p id="chatlog2" class="chatlog">&nbsp;</p>
             <p id="chatlog1" class="chatlog">&nbsp;</p>
-            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Hi there! Type here to talk to me." onfocus="placeHolder()">
+            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Zone de texte (ICI)." onfocus="placeHolder()">
             </div>
         </div>
     </div>
