--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p id="chatlog3" class="chatlog">&nbsp;</p>
             <p id="chatlog2" class="chatlog">&nbsp;</p>
             <p id="chatlog1" class="chatlog">&nbsp;</p>
-            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Zone de texte (ICI)." onfocus="placeHolder()">
+            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Zone de texte (ICI).">
             </div>
         </div>
     </div>
