--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>WO Tennis</title>
+        <title>CHATBOT</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
         <script defer src="bot.js"></script>
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+                        <button class="openbtn" onclick="openNav()">&#9776; Tous les BOTS</button>
                     </li>
                 </ul>
             </div>
