commands help and stuff

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <button class="openbtn" onclick="openNav()">&#9776; Tous les BOTS</button>
+                        <button class="openbtn" onclick="openNav()">&#9776; BOT List</button>
                     </li>
                 </ul>
             </div>
@@ -33,13 +33,13 @@
         <div id='bodybox'>
             <div id='chatborder'>
             <p id="chatlog7" class="chatlog">&nbsp;</p>
-            <p id="chatlog6" class="chatlog">&nbsp;</p>
+            <p id="chatlog6" class="chatlogA">&nbsp;</p>
             <p id="chatlog5" class="chatlog">&nbsp;</p>
-            <p id="chatlog4" class="chatlog">&nbsp;</p>
+            <p id="chatlog4" class="chatlogA">&nbsp;</p>
             <p id="chatlog3" class="chatlog">&nbsp;</p>
-            <p id="chatlog2" class="chatlog">&nbsp;</p>
+            <p id="chatlog2" class="chatlogA">&nbsp;</p>
             <p id="chatlog1" class="chatlog">&nbsp;</p>
-            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Zone de texte (ICI).">
+            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Write here.">
             </div>
         </div>
     </div>
