--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div style="margin:40px">
         <div id='bodybox'>
             <div id='chatborder'>
+            <p id="chatlog9" class="chatlog">&nbsp;</p>
+            <p id="chatlog8" class="chatlogA">&nbsp;</p>
             <p id="chatlog7" class="chatlog">&nbsp;</p>
             <p id="chatlog6" class="chatlogA">&nbsp;</p>
             <p id="chatlog5" class="chatlog">&nbsp;</p>
