--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>CHATBOT</title>
+        <title>ChatBot</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
         <script defer src="bot.js"></script>
@@ -23,10 +23,10 @@
         </div>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <img  alt="CHATBOT" width=50 height=68>
-            <a href="#">BOT_V1</a>
-            <a href="#">BOT_V2</a>
-            <a href="#">BOT_V3</a>
+            <img  alt="ChatBot" width=50 height=68>
+            <a id="bot1" href="#"></a>
+            <a id="bot2" href="#"></a>
+            <a id="bot3" href="#"></a>
           </div>
     </nav>
     <div style="margin:40px">
