--- a/index.html
+++ b/index.html
@@ -24,24 +24,27 @@
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <img  alt="ChatBot" width=50 height=68>
-            <a id="bot1" href="#"></a>
-            <a id="bot2" href="#"></a>
-            <a id="bot3" href="#"></a>
+            <a id="botV1" href="#"></a>
+            <a id="botV2" href="#"></a>
+            <a id="botV3" href="#"></a>
           </div>
     </nav>
     <div style="margin:40px">
-        <div id='bodybox'>
+        <div id='bodybox'> 
             <div id='chatborder'>
-            <p id="chatlog9" class="chatlog">&nbsp;</p>
-            <p id="chatlog8" class="chatlogA">&nbsp;</p>
-            <p id="chatlog7" class="chatlog">&nbsp;</p>
-            <p id="chatlog6" class="chatlogA">&nbsp;</p>
-            <p id="chatlog5" class="chatlog">&nbsp;</p>
-            <p id="chatlog4" class="chatlogA">&nbsp;</p>
-            <p id="chatlog3" class="chatlog">&nbsp;</p>
-            <p id="chatlog2" class="chatlogA">&nbsp;</p>
-            <p id="chatlog1" class="chatlog">&nbsp;</p>
-            <input type="text" name="chat" class ="form-control" id="chatbox" placeholder="Write here.">
+                <p id="chatlog9" class="chatlog">&nbsp;</p>
+                <p id="chatlog8" class="chatlogA">&nbsp;</p>
+                <p id="chatlog7" class="chatlog">&nbsp;</p>
+                <p id="chatlog6" class="chatlogA">&nbsp;</p>
+                <p id="chatlog5" class="chatlog">&nbsp;</p>
+                <p id="chatlog4" class="chatlogA">&nbsp;</p>
+                <p id="chatlog3" class="chatlog">&nbsp;</p>
+                <p id="chatlog2" class="chatlogA">&nbsp;</p>
+                <p id="chatlog1" class="chatlog">&nbsp;</p>
+                <div class="input-group mb-3">
+                    <input type="text" id="chatbox" class="form-control" placeholder="Write here" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-primary" type="button" id="button-addon2">Button</button>
+                </div>
             </div>
         </div>
     </div>
