--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <button class="openbtn" onclick="openNav()">&#9776; BOT List</button>
+                        <button class="btn btn-primary" onclick="openNav()">&#9776; BOT List</button>
                     </li>
                 </ul>
             </div>
@@ -42,8 +42,8 @@
                 <p id="chatlog2" class="chatlogA">&nbsp;</p>
                 <p id="chatlog1" class="chatlog">&nbsp;</p>
                 <div class="input-group mb-3">
-                    <input type="text" id="chatbox" class="form-control" placeholder="Write here" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-primary" type="button" id="button-addon2">Button</button>
+                    <input type="text" id="chatbox" class="form-control" placeholder="Write here (type 'help' if you are lost)" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-primary" type="button" id="button-addon2">Submit</button>
                 </div>
             </div>
         </div>
